# example

./: .env.example  Dockerfile  README.md  appspec.yaml  auth.py  buildspec.yml  docker-compose.yaml  main.py  pyproject.toml  taskdef.json
dynamodb-data/: shared-local-instance.db
